tests/sawn/fixtures/invalid/32_space_before_suffix.sawn
// §3: Space between key and structure suffix is a parse error
config {}
  host="localhost"
